Version1.7.5.RC1 Modifications can now be defined as applicable before or after digest BugFix: decoy generation ignored FASTA-modifications Restored compatibility with java 1.8